[package]
name = "bce-ocr"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["poly000"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
ureq = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
serde_url_params = "0.2.1"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1

[dev-dependencies]
rstest = "0.13.0"